# guarani

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE.md  README.md
config/: gps.hex
doc/: guarani
include/: baro_comm.h  bmp280_t.h  config_ublox.h  gps.h  i2c_aquisition.h  i2c_fd.h  lsm9ds1_t.h  packet.h  packetbuffer.h  recorder.h  ringbuffer.h  serial.h  thread.h
scripts/: clear_guarani.sh  download.sh  prep_debug.sh  sync.sh
src/: bmp280_t.cpp  config_ublox.cpp  gps.cpp  i2c.cpp  i2c_aquisition.cpp  i2c_fd.cpp  lsm9ds1_t.cpp  main.cpp  recorder.cpp  serial.cpp
toolchain/: toolchain.cmake
